--- a/Assignments/Assignment_2/Troudt_A2_ISQA_8080.html
+++ b/Assignments/Assignment_2/Troudt_A2_ISQA_8080.html
@@ -210,6 +210,10 @@ summary {
 <p><strong>c</strong>. The advantages of using cross-validation on the entire data-set include an estimate of the error-rate that will have relatively low variance and will only require k implementations of each model tested. The generation of an error-rate curve across the different models being tested (and potentially at different levels of k) will allow for selection of the model with a given parameter setting that produces the minimal error rate.</p>
 <p>If the sample data is split 80/20 training:test, with cross validation being used on the training data to select the model, it will allow for a ‘fine-tuning’ of the parameters being considered. This leads the estimation of an error-rate that is based on a set of observations that were not involved at all in fitting the model (20% of the split), and therefore will provide a more valid estimate of that model’s actual performance.</p>
 </div>
+<div id="question-3" class="section level2">
+<h2><strong>Question 3</strong></h2>
+<p><strong>a</strong>. Based off of the pairwise comparisons of income with each predictor variable, marital status appears to be most relevant, with both occupation and sex also having some relevancy to a lesser extent. In all three of these variables, there are certain levels that exhibit a much larger proportion of income &gt; 50K compared with the other levels, making them relevant for predicting whether an individual’s income is &gt; 50K.</p>
+</div>
 
 
 
